--- a/theme/html/ltr/vertical-content-menu-template/dashboard-analytics.html
+++ b/theme/html/ltr/vertical-content-menu-template/dashboard-analytics.html
@@ -41,7 +41,7 @@
           <ul class="nav navbar-nav flex-row">
             <li class="nav-item mobile-menu d-md-none mr-auto"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i class="ft-menu font-large-1"></i></a></li>
             <li class="nav-item"><a class="navbar-brand" href="../../../html/ltr/vertical-content-menu-template/index.html"><img class="brand-logo" alt="robust admin logo" src="../../../app-assets/images/logo/logo-dark-sm.png">
-                <h3 class="brand-text">Robust Admin</h3></a></li>
+                <h3 class="brand-text">Robust Admin111</h3></a></li>
             <li class="nav-item d-md-none"><a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="fa fa-ellipsis-v"></i></a></li>
           </ul>
         </div>
